# wavelet-wqn-acha

./: 03_copy.py  data_mse_comparison_hurst0.5.csv  df1_comp.csv  df2_comp.csv  df_comp_scales.csv  methods.py  pyproject.toml  readme.md  table.tex  table_statistics_hurst0.5_N10.csv  tools.py  ws_tmp.py
2nd_paper/: figure_brownian_noise.py  figure_discontinuities.py  figure_variance_vs_scales.py  figures.py
acha_scripts/: 01_figure_1__algorithm_example.py  02_figure_2__coeff_distributions.py  03_figure_3__distribution_comparison.py  04_figure_4__perf_comparison.py  04_table_1.py  05_figure_5__anesthesia.py
output/: table_1.tex  table_statistics_hurst0.5_N1000.csv
resources/: figstyle.mplstyle
theory/: 02_figure_transport_example.py  03_figure_histogram_comparison.py  04_figure_anesthesia.py  04_figure_mse_comparison.py  cusp_and_more.py  figure_for_pres.py  mfa.py  toy_model.py  wavelet_coeff_distribution.py  wavelet_transport_demo.py
