[tool.poetry]
name = "wqn-paper"
version = "0.1.0"
description = ""
authors = ["Matteo <matteo.dora@ens.fr>"]

[tool.poetry.dependencies]
python = "~3.10"
scipy = "^1.8.1"
numpy = "^1.22.4"
matplotlib = "^3.5.2"
PyWavelets = "^1.3.0"
ipykernel = "^6.13.0"
fbm = "^0.3.0"
cmocean = "^2.0"
h5py = "^3.7.0"
pandas = "^1.4.2"
pyemd = "^0.5.1"
sklearn = "^0.0"
tqdm = "^4.64.0"

[tool.poetry.dev-dependencies]
ipykernel = "^6.13.0"
python-lsp-server = "^1.4.1"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
